--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,238 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Gestão Contábil</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <!-- Navbar -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gestão Contábil - Bot Fiscal</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <i class="bi bi-calculator"></i> Gestão Contábil
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">
-                            <i class="bi bi-house"></i> Início
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="dashboard.html">
-                            <i class="bi bi-graph-up"></i> Dashboard
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="empresas.html">
-                            <i class="bi bi-building"></i> Empresas
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="competencias.html">
-                            <i class="bi bi-calendar-check"></i> Competências
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="obrigacoes.html">
-                            <i class="bi bi-file-earmark-text"></i> Obrigações
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="problemas.html">
-                            <i class="bi bi-exclamation-triangle"></i> Problemas
-                        </a>
-                    </li>
-                </ul>
-                <div class="d-flex align-items-center text-white">
-                    <i class="bi bi-person-circle me-2"></i>
-                    <span id="usuarioNome">Usuário</span>
-                </div>
-            </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <i class="bi bi-robot"></i>
+          Bot Fiscal
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Início</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="dashboard.html">Dashboard</a>
+            </li>
+          </ul>
+          <span class="navbar-text text-white">POC Bot Fiscal</span>
         </div>
+      </div>
     </nav>
 
-    <!-- Conteúdo Principal -->
-    <div class="container-fluid mt-4">
-        <!-- Cards de Resumo -->
-        <div class="row mb-4">
-            <div class="col-md-3">
-                <div class="card text-white bg-primary">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div>
-                                <h6 class="card-title">Empresas Ativas</h6>
-                                <h2 class="mb-0" id="totalEmpresas">0</h2>
-                            </div>
-                            <i class="bi bi-building fs-1"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card text-white bg-warning">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div>
-                                <h6 class="card-title">Em Andamento</h6>
-                                <h2 class="mb-0" id="competenciasAndamento">0</h2>
-                            </div>
-                            <i class="bi bi-hourglass-split fs-1"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card text-white bg-danger">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div>
-                                <h6 class="card-title">Em Risco</h6>
-                                <h2 class="mb-0" id="obrigacoesRisco">0</h2>
-                            </div>
-                            <i class="bi bi-exclamation-triangle fs-1"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card text-white bg-success">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div>
-                                <h6 class="card-title">Concluídas</h6>
-                                <h2 class="mb-0" id="competenciasConcluidas">0</h2>
-                            </div>
-                            <i class="bi bi-check-circle fs-1"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <main class="container py-5">
+      <section class="mb-5 text-center">
+        <h1 class="display-5">Assistente Fiscal via WhatsApp</h1>
+        <p class="lead">
+          Configure o Webhook, envie uma mensagem do número de teste e acompanhe o andamento
+          das conversas e obrigações diretamente pelo painel.
+        </p>
+        <a class="btn btn-primary btn-lg" href="dashboard.html">
+          <i class="bi bi-graph-up"></i>
+          Abrir Dashboard
+        </a>
+      </section>
 
-        <!-- Ações Rápidas -->
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-primary text-white">
-                        <h5 class="mb-0"><i class="bi bi-lightning"></i> Ações Rápidas</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="row g-3">
-                            <div class="col-md-3">
-                                <button class="btn btn-outline-primary w-100" onclick="novaEmpresa()">
-                                    <i class="bi bi-plus-circle"></i><br>
-                                    Nova Empresa
-                                </button>
-                            </div>
-                            <div class="col-md-3">
-                                <button class="btn btn-outline-success w-100" onclick="novaCompetencia()">
-                                    <i class="bi bi-calendar-plus"></i><br>
-                                    Nova Competência
-                                </button>
-                            </div>
-                            <div class="col-md-3">
-                                <button class="btn btn-outline-warning w-100" onclick="retomarPendentes()">
-                                    <i class="bi bi-play-circle"></i><br>
-                                    Retomar Pendentes
-                                </button>
-                            </div>
-                            <div class="col-md-3">
-                                <button class="btn btn-outline-info w-100" onclick="verRelatorios()">
-                                    <i class="bi bi-file-earmark-bar-graph"></i><br>
-                                    Relatórios
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <section class="row g-4">
+        <article class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title"><i class="bi bi-whatsapp"></i> Configuração Rápida</h5>
+              <ol class="text-start">
+                <li>Defina o <code>VERIFY_TOKEN</code> e gere um token temporário.</li>
+                <li>Cadastre o webhook apontando para <code>APP_BASE_URL/webhook</code>.</li>
+                <li>Adicione os testers no WhatsApp Cloud API e use os números de seed.</li>
+              </ol>
             </div>
-        </div>
-
-        <!-- Competências Pendentes -->
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-warning text-dark">
-                        <h5 class="mb-0"><i class="bi bi-list-task"></i> Competências Pendentes</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Empresa</th>
-                                        <th>Regime</th>
-                                        <th>Competência</th>
-                                        <th>Status</th>
-                                        <th>Próxima Etapa</th>
-                                        <th>Ações</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="tabelaPendentes">
-                                    <tr>
-                                        <td colspan="6" class="text-center">
-                                            <div class="spinner-border" role="status">
-                                                <span class="visually-hidden">Carregando...</span>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+          </div>
+        </article>
+        <article class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title"><i class="bi bi-diagram-3"></i> Fluxos Disponíveis</h5>
+              <p class="mb-2">O bot cobre dois caminhos com state machine:</p>
+              <ul class="text-start mb-0">
+                <li>Simples Nacional &mdash; comércio com movimento.</li>
+                <li>Lucro Presumido &mdash; comércio com movimento.</li>
+              </ul>
             </div>
-        </div>
-
-        <!-- Próximos Vencimentos -->
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-danger text-white">
-                        <h5 class="mb-0"><i class="bi bi-alarm"></i> Próximos Vencimentos (7 dias)</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Empresa</th>
-                                        <th>Obrigação</th>
-                                        <th>Esfera</th>
-                                        <th>Vencimento</th>
-                                        <th>Dias</th>
-                                        <th>Status</th>
-                                        <th>Responsável</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="tabelaVencimentos">
-                                    <tr>
-                                        <td colspan="7" class="text-center">
-                                            <div class="spinner-border" role="status">
-                                                <span class="visually-hidden">Carregando...</span>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+          </div>
+        </article>
+        <article class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title"><i class="bi bi-chat-dots"></i> Comandos Úteis</h5>
+              <p class="mb-2">Durante a conversa, experimente enviar:</p>
+              <ul class="text-start mb-0">
+                <li><code>novo</code>, <code>nova empresa</code>, <code>encerrar</code></li>
+                <li><code>pendencias</code>, <code>resumo</code>, <code>problema</code></li>
+                <li><code>observacao</code>, <code>desabafo</code>, <code>pular</code>, <code>retomar</code></li>
+              </ul>
             </div>
-        </div>
-    </div>
+          </div>
+        </article>
+      </section>
+    </main>
 
-    <!-- Scripts -->
+    <footer class="bg-light py-3 border-top">
+      <div class="container text-center text-muted small">
+        Bot Fiscal &bull; Prova de conceito local integrada ao WhatsApp Cloud API
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
